[package]
name = "cni"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.17.0"
thiserror = "1.0.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1.5"
json="*"
nix= {version = "0.28.0" , features = ["user","sched"]}
netns-rs =  {path = "src/netns-rs"}